--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <br>
 
     <!-- Question 4 -->
-    <p><strong>Q4. Which combination of super powers best describes your personality? (Select up to three)</strong></p>
+    <p><strong>Q4. Which combination of super powers best describes your personality?</strong></p>
     <label>
         <input type="checkbox" name="superpower" value="flight">Flight
     </label>
