--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             <label for="lname" class="form-label">Last Name:</label>
             <input type="text" class="form-control" id="lname" placeholder="Enter your last name..." name="fname">
           </div>
+         </form>
+    </div>
 <!-- Email and Phone Number -->
         <div class="mb-3 mt-3">
             <label for="email" class="form-label">Email:</label>
