--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="nav-link" target="_blank" href="https://gist.github.com/barrycumbie/892372aa45634b0a28b7354ea076bac6">Hotel Story Card</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" target="_blank" href="">Validity Checker</a>
+                <a class="nav-link" target="_blank" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Frastifer.github.io%2Fsilver-chainsaw-hotel-jrast%2F">Validity Checker</a>
             </li>
         </ul>
     </nav>
