--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </label>
     <br>
     <br>
-    
+</form>
     <!-- Submit and Clear Button -->
     <div class="button">
         <input type="submit" value="Submit" class="btn btn-primary">
