--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <input type="submit" value="Submit" class="btn btn-primary">
         <input type="reset" value="Clear" class="btn btn-secondary">
     </div>
-
+    </div>
 
 </body>
 
