--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
 </form>
 </div>
 </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
+<script src="script/script.js"></script>
 </body>
 
 </html>
