--- a/index.html
+++ b/index.html
@@ -48,11 +48,17 @@
             <label for="lname" class="form-label">Last Name:</label>
             <input type="text" class="form-control" id="lname" placeholder="Enter your last name..." name="fname">
           </div>
-<!-- Email and Phone Number -->
+<!-- Email and Password -->
         <div class="mb-3 mt-3">
             <label for="email" class="form-label">Email:</label>
             <input type="email" class="form-control" id="email" placeholder="Enter your email address..." name="email">
           </div>
+        <div class="mb-3 mt-3">
+            <label for="password" class="form-label">Password:</label>
+            <input type="password" class="form-control" id="pwd" placeholder="Enter your password..." name="pwd">
+        </div>
+
+<!--     Phone Number          -->
         <div class="mb-3 mt-3">
             <label for="phone" class="form-label">Phone Number:</label>
             <input type="tel" class="form-control" id="phone" placeholder="(###) ###-####" name="phone">
